[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
yamux = "0.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7.18", features = ["compat"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
