[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
yamux = "0.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
tokio-util = { version = "0.7.18", features = ["compat"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.23.1", features = ["v4"] }
axum = "0.8.9"
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
